# ushell-rtic-example

./: Cargo.toml  readme.md
.cargo/: config
src/: main.rs  shell.rs
